--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <div id="fcf-form">
     <h3 class="fcf-h3">Contact us</h3>
 
-    <form id="fcf-form-id" class="fcf-form-class" method="post" action="https://formsubmit.co/mekhivibennett14@gmail.com">
+    <form id="fcf-form-id" class="fcf-form-class" method="post" action="https://formsubmit.co/550e229ca7b9d2ee02f69d329781d5ee">
         
         <div class="fcf-form-group">
             <label for="Name" class="fcf-label">Your name</label>
